fixed minor visual  bugs due to if statement bound gaps

--- a/PortfolioYH.css
+++ b/PortfolioYH.css
@@ -424,4 +424,5 @@ fieldset{
     padding-right: 20%;
     height: 20%;
     text-align: center;
+    opacity: 0;
 }
